--- a/client/src/app/views/matches/match-view/match-view.component.html
+++ b/client/src/app/views/matches/match-view/match-view.component.html
@@ -5,6 +5,7 @@
             {{match | json}}
             <app-match-toss-result (tossUpdateEvent)="updateToss($event)" [teams]="match.teams" [status]="match.status" [matchId]="match._id" [tossResult]="match.toss"></app-match-toss-result>
             <app-match-start-first-inning [matchId]="match._id" [status]="match.status"></app-match-start-first-inning>
+            <app-match-start-second-inning [matchId]="match._id" [status]="match.status"></app-match-start-second-inning>
         </div>
     </c-card-body>
 </c-card>
