--- a/client/src/app/views/matches/match-score/match-score.component.html
+++ b/client/src/app/views/matches/match-score/match-score.component.html
@@ -2,9 +2,10 @@
     <c-card class="mb-3">
         <c-card-header>{{matchTitle}}&nbsp;{{inningType}}</c-card-header>
         <c-card-body class="p-4">
-            <form cForm [formGroup]="scoreSubmitForm">
+            <form cForm [formGroup]="scoreSubmitForm" (ngSubmit)="submitDelivery()">
                 <div class="mb-3">
                     <span>{{inning.batting.name}}&nbsp;Batsmen</span>
+                    <span *ngIf="scoreSubmitForm.get('batsman')?.errors?.['required']">*required</span>
                     <c-form-check *ngFor="let player of inning.batting.players; let i = index">
                         <input cFormCheckInput type="radio" [value]="player._id" name="batsman" formControlName="batsman"/>
                         <label cFormCheckLabel>{{player.firstName +' '+ player.lastName}}</label>
@@ -12,6 +13,7 @@
                 </div>
                 <div class="mb-3">
                     <span>{{inning.bowling.name}}&nbsp;Bowlers</span>
+                    <span *ngIf="scoreSubmitForm.get('bowler')?.errors?.['required']">*required</span>
                     <c-form-check *ngFor="let player of inning.bowling.players; let i = index">
                         <input cFormCheckInput type="radio" [value]="player._id" name="bowler" formControlName="bowler"/>
                         <label cFormCheckLabel>{{player.firstName +' '+ player.lastName}}</label>
@@ -19,6 +21,7 @@
                 </div>
                 <div class="mb-3">
                     <span>Runs</span>
+                    <span *ngIf="scoreSubmitForm.get('runs')?.errors?.['required']">*required</span>
                     <c-form-check *ngFor="let run of runs; let i = index">
                         <input cFormCheckInput type="radio" [value]="run" name="runs" formControlName="runs"/>
                         <label cFormCheckLabel>{{run}}</label>
@@ -33,8 +36,8 @@
                 </div>
                 <div class="mb-3">
                     <span>Extras</span>
-                    <c-form-check *ngFor="let extra of extras; let i = index">
-                        <input cFormCheckInput type="radio" [value]="extra" name="extra" formControlName="extra"/>
+                    <c-form-check *ngFor="let extra of extrasType; let i = index">
+                        <input cFormCheckInput type="radio" [value]="extra" name="extraType" formControlName="extraType"/>
                         <label cFormCheckLabel>{{extra}}</label>
                       </c-form-check>
                 </div>
@@ -47,7 +50,7 @@
                 </div>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <button type="submit" cButton color="success">Publish</button>
-                    <button type="button" cButton color="danger">Sync</button>
+                    <button type="button" cButton (click)="syncData()" color="danger">Sync</button>
                   </div>
                 <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button type="button" (click)="cancel()" cButton color="danger">Cancel</button>
@@ -90,8 +93,6 @@
             </c-button-toolbar>
         </c-card-body>
     </c-card>
-    {{currentOverList|json}}
-    {{previousOverList|json}}
     {{scoreSubmitForm.value | json}}
     {{scoreSubmitForm.status}}
     
