--- a/client/src/app/views/public/live-inning/live-inning.component.html
+++ b/client/src/app/views/public/live-inning/live-inning.component.html
@@ -8,7 +8,7 @@
     <c-row>
         <c-col>Score</c-col>
         <c-col>{{liveScore.runs +
-            liveScore.extras}}&nbsp;/{{liveScore.wickets}}&nbsp;&nbsp;Balls&nbsp;{{liveScore.balls}}</c-col>
+            liveScore.extras}}&nbsp;/{{liveScore.wickets}}&nbsp;&nbsp;Over&nbsp;{{over}}</c-col>
         <c-col>Extras&nbsp;{{liveScore.extras}}</c-col>
     </c-row>
 </c-container>
