--- a/client/src/app/views/public/live-match/live-match.component.html
+++ b/client/src/app/views/public/live-match/live-match.component.html
@@ -3,7 +3,7 @@
     <c-card-body class="p-4">
         <p>{{tossSummaryLine}}</p>
         <ng-container *ngIf="isDataLoaded">
-            <app-live-inning [inningId]="liveInningId" [roomId]="roomId" [inningType]="liveInningType"></app-live-inning>
+            <app-live-inning [inningId]="liveInningId" [roomId]="roomId" [inningType]="liveInningType" [matchSettings]="matchSettings"></app-live-inning>
         </ng-container>
     </c-card-body>
 </c-card>
