--- a/client/src/app/views/public/completed-match/completed-match.component.html
+++ b/client/src/app/views/public/completed-match/completed-match.component.html
@@ -1,1 +1,12 @@
-<p>Completed</p>
+<c-card class="mb-3">
+    <c-card-header>{{teamNames[0]}}&nbsp;vs&nbsp;{{teamNames[1]}}</c-card-header>
+    <c-card-body class="p-4">
+        <p>{{tossSummaryLine}}</p>
+        <ng-container *ngIf="isDataLoaded">
+            <app-other-inning [inningId]="firstInningId" [inningType]="firstInningType"
+                [matchSettings]="matchSettings"></app-other-inning>
+            <app-other-inning [inningId]="secondInningId" [inningType]="secondInningType"
+                [matchSettings]="matchSettings"></app-other-inning>
+        </ng-container>
+    </c-card-body>
+</c-card>
